--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,26 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 20px 50px;
 }
 
-a {
-  color: #00B7FF;
+section#commands-list{
+    padding:    10px;
+    margin-top: 20px;
 }
+
+.big-text{ font-size: 16px;}
+
+li{
+    list-style-type: square;
+    padding-bottom: 3px;
+}
+
+li strong {
+    color:  #555;
+    font-size: 12px;
+    font-family: Monaco, "Lucida Console",monospace;
+}
+li i{
+    color: #999;
+    font-size: 12px;
+}
+
